fix click events on mobile

--- a/packages/client/src/components/CardSlot/CardSlot.scss
+++ b/packages/client/src/components/CardSlot/CardSlot.scss
@@ -25,7 +25,6 @@
 }
 
 .slot {
-  @include buttonReset();
   margin: 8px;
   background-color: fade($white, 2);
   border-radius: 4px;
